[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cluster-tunnel"
version = "0.4.0"
description = "Authenticated SSH tunnels + session-scoped compute-budget guard for HPC clusters, as a CLI for coding agents."
authors = [
    {name = "Jonas Teufel", email = "jonseb1998@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich_click>=1.8.8,<=2.0.0",
    "pydantic>=2.5.3",
    "pyyaml>=6.0",
    "appdirs>=1.0.0,<=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "bump-my-version>=0.28.0",
]

[project.scripts]
ctun = "cluster_tunnel.cli:cli"

[tool.setuptools.packages.find]
include = ["cluster_tunnel", "cluster_tunnel.*"]

[tool.setuptools.package-data]
"cluster_tunnel" = ["config.example.yaml", "budget_templates/*", "scripts/*", "VERSION"]
"cluster_tunnel.cli" = ["assets/*"]

# Version bumping — keeps pyproject.toml and cluster_tunnel/VERSION in sync.
# Run e.g. `uv run bump-my-version bump patch` (or minor/major).
# Deliberately scoped: CHANGELOG.md (historical [0.1.0] entry) and tests are
# NOT listed, so a bump can't rewrite them.
[tool.bumpversion]
current_version = "0.4.0"
parse = "(?<![=<>])(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = true
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
files = [
    {filename = "pyproject.toml", search = "version = \"{current_version}\"", replace = "version = \"{new_version}\""},
    {filename = "cluster_tunnel/VERSION"},
]
